fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ ul {
 .intro {
 	text-align: left;
 	width: 80%;
-	margin: 0 auto 4rem;
+	margin: 0 auto 2rem;
 	padding-top: 14rem;
 }
 .image {
@@ -86,7 +86,7 @@ ul {
 .portfolio {
 	text-align: left;
 	width: 80%;
-	margin: 6rem auto;
+	margin: 4rem auto;
 }
 .case {
 	display: inline-block;
